added to .home- etc to css

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,20 @@ a {
   border-radius: 4px;
 }
 
+/* .homepage {
+  background-color: red;
+  display: flex;
+  margin-top: 5em;
+}
+
+.home-book {
+  width: 50%
+}
+
+.home-story {
+  width: 50%;
+} */
+
 /* .bookcard img {
   height: 100px;
 } */
