--- a/src/App.css
+++ b/src/App.css
@@ -21,13 +21,37 @@ a {
   font-size: 2em;
 }
 
+button {
+  font-size: 1em;
+  font-family:Arial, Helvetica, sans-serif;
+  margin-right: 5px;
+  border-radius: 50px;
+  text-align: center;
+}
+
 .nav {
   position: fixed;
-  background-color: white;
+  background-image: url(https://i.pinimg.com/736x/4c/38/03/4c38037d5a3c6006020fc8ebc201d707.jpg);
+  background-size: cover;
   width: 100%;
   top: 0;
-
 }
+
+  .left-nav {
+    float:left;
+    padding-left:5%;
+  }
+
+  .mid-nav {
+    float:left;
+    padding-left: 30%
+  }
+
+  .right-nav {
+    float:left; 
+    padding-left:30%;
+    padding-right: 5%
+  }
 
 .book-card {
   border-radius: 4px;
@@ -36,7 +60,14 @@ a {
 .homepage-div {
   display: flex;
   padding-top: 5%;
+}
 
+.top-books {
+  padding: 3%
+}
+
+.top-stories {
+  padding: 3%
 }
 
 .home-left {
@@ -59,51 +90,7 @@ img {
   vertical-align: middle;
 }
 
-/* .bookcard img {
-  height: 100px;
-} */
-
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
-
 .App {
   text-align: center;
 }
 
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
