--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,7 @@ button {
   }
 
 .book-card {
+  display:flex;
   border-radius: 4px;
 }
 
@@ -83,11 +84,27 @@ button {
 }
 
 .top-books {
-  padding: 5%
+  /* display: flexbox; */
+  /* justify-content: space-around; */
+  padding-left: 5%;
+  padding-right: 5%
+}
+
+.book-img {
+  float: left;
+  width: 50%;
+}
+.book-abt{
+  padding-top: 20%;
+  padding-right: 20%;
+  float: right;
+  justify-content: center;
+  align-items: center;
+  width: 50%
 }
 
 .top-stories {
-  justify-content: center;
+  justify-content:center;
   padding-left: 5%;
   padding-right: 5%;
 
