--- a/src/App.css
+++ b/src/App.css
@@ -105,14 +105,17 @@ button {
 
 .top-stories {
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
   padding-left: 5%;
   padding-right: 5%;
-  
+  justify-content: center;
 }
 
 .story-card {
-  width: 35%;
+  width: 25%;
+  margin:2%;
+  border: 2px black;
+  border-radius: 4px;
 }
 .story-c-image {
   max-width: 100%;
