--- a/src/App.css
+++ b/src/App.css
@@ -118,7 +118,8 @@ button {
   margin:2%;
   border: 2px solid black;
   border-radius: 4px;
-  height: min-content;
+  height: 600px;
+  overflow-y: scroll;
 }
 .story-c-image {
   max-width: 100%;
