--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html {
-  background: url(https://c1.wallpaperflare.com/preview/955/426/445/paper-old-texture-parchment.jpg) no-repeat center fixed;
+  background: url(https://img.myloview.com/posters/old-paper-background-old-crumpled-paper-texture-vintage-retro-newspaper-empty-blank-space-page-with-grunge-stain-line-pattern-400-211347626.jpg) no-repeat center fixed;
   background-size: cover;
 }
 
@@ -118,9 +118,13 @@ button {
   margin:2%;
   border: 2px solid black;
   border-radius: 4px;
-  height: 600px;
+  height: 700px;
   overflow-y: scroll;
 }
+ .story-card::-webkit-scrollbar {
+   display: hidden;
+ }
+
 .story-c-image {
   max-width: 100%;
   height: auto;
