--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ button {
   border: 2px solid black;
   border-radius: 4px;
   height: 700px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
  .story-card::-webkit-scrollbar {
    display: hidden;
