--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 html {
   background: url(https://img.myloview.com/posters/old-paper-background-old-crumpled-paper-texture-vintage-retro-newspaper-empty-blank-space-page-with-grunge-stain-line-pattern-400-211347626.jpg) no-repeat center fixed;
   background-size: cover;
+  margin: 0;
 }
 
 
@@ -8,11 +9,12 @@ html {
 /* <img itemprop="contentUrl" class="view_img" id="vimg" data-height="517" alt="untitled, paper, old, texture, parchment, background, antique, HD wallpaper" src="" height="517"> */
 
 body {
-  padding-top: 58px;
+  /* padding-top: 58px;
   margin-top: 0;
   margin-left: 0;
-  margin-right: 0;
+  margin-right: 0; */
   justify-content: center;
+  margin: 0;
 }
 
 p {
@@ -29,6 +31,7 @@ a {
   color: black;
   font-family: sans-serif;
   font-size: 24px;
+  text-decoration: none;
 }
 
 button {
@@ -40,16 +43,18 @@ button {
 }
 
 .nav {
-  position: fixed;
+  /* position: fixed; */
   /* display: block; */
   background-color: ivory;
   background-size: cover;
   width: 100%;
   top: 0;
+  margin: 0 10px 10px 0;
   /* justify-content: center; */
 }
   h1 {
     font-family: "OldEnglish";
+    font-size: 60px;
   }
 
   .left-nav {
