--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 html {
-  background: url(https://img.myloview.com/posters/old-paper-background-old-crumpled-paper-texture-vintage-retro-newspaper-empty-blank-space-page-with-grunge-stain-line-pattern-400-211347626.jpg) no-repeat center fixed;
+  /* background: url(https://img.myloview.com/posters/old-paper-background-old-crumpled-paper-texture-vintage-retro-newspaper-empty-blank-space-page-with-grunge-stain-line-pattern-400-211347626.jpg) no-repeat center fixed; */
+  background-color: white;
   background-size: cover;
   margin: 0;
 }
@@ -18,7 +19,7 @@ body {
 }
 
 p {
-  font-family: sans-serif;
+  font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 1.2em;
   font-weight: medium;
 }
@@ -45,7 +46,7 @@ button {
 .nav {
   /* position: fixed; */
   /* display: block; */
-  background-color: ivory;
+  background-color: rgb(255, 255, 255);
   background-size: cover;
   width: 100%;
   top: 0;
@@ -145,7 +146,7 @@ button {
   width: 50%;
   align-items: center;
   vertical-align: middle;
-  
+  margin: 0% 10% 10% 0%;
 }
 
 .home-right {
